[#130] Block clean up and refactor (#138)
* [#130] Updating default block settings

* [#130] Setting width for all blocks

This adjusts the width for all blocks so they can have a full width background color but the content is constrained.

* [#130] Adjusting text on dark bg, default top/bottom padding

* [#130] Updating page template

* [#127] Updating alert banner

* [#130] Refactoring the Alert banner

* [#130] Refactoring the CTA block

* [#130] Refactoring page header

* [#130] Refactor text image block

* [#130] Refactor video embed

* [#130] Updating block plop template

* [#130] Fixing css for logo grid, icon cards

* [#130] Refactoring text-image

* [#130] Adding template.json data to every block

* [#130] Add Support for template.json Block File

* [#130] Refactoring the breadcrumbs block

* [#130] Nesting css

* [#130] Refactor text-icon cards

* [#130] Updating plop tempalte files to match new block files

* [#130] Updating template builder | glob css import

* [#130] Changing all to @import-glob

* [#130] Removing old css tempalte for plop

* [#310] Updating accordion block json

* [#130] Updating from attributes to block

* [#130] Fixing plop variations

* [#130] Fixing merge conflict

* [#130] Updating blocks to use template.json

* [#130] Adding recommend VS plugin

* [#130] PR edits

* [#130] Refactor of block wrapper

* [#130] updating class name

* [#130] Adjusting the left/right justification for blocks

* [#130] Block alignment

---------

Co-authored-by: Brian DiChiara <brian.dichiara@viget.com>

--- a/wp-content/themes/wp-starter/blocks/accordion/render.twig
+++ b/wp-content/themes/wp-starter/blocks/accordion/render.twig
@@ -2,21 +2,11 @@
   Block: Accordion
 #}
 
-{% set template = [
-  [
-    'core/details',
-    {
-      'showContent': true
-    }
-  ],
-  [ 'core/details' ],
-  [ 'core/details' ],
-] %}
-{% set allowed = [ 'core/details' ] %}
 {% set inner = {
-	template: template,
-	allowedBlocks: allowed
+	template: block.template ?? [],
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="acf-block-inner__container">
+  		{{ inner_blocks( inner ) }}
+	</div>
 </section>
