--- a/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
+++ b/wp-content/themes/wp-starter/blocks/alert-banner/render.twig
@@ -2,36 +2,29 @@
 Block: Alert Banner
 #}
 
-{% set template = [
-	[
-		'core/paragraph',
-		{
-			'placeholder': 'Enter alert banner message...'
-		}
-	]
-] %}
-{% set allowed = [
-	'core/paragraph',
-	'core/button',
-] %}
+{% set id = 'alert' ~ block.id %}
+
+{% if block.block_id is not empty %}
+    {% set id = 'alert' ~ block.block_id %}
+{% endif %}
+
 {% set inner = {
-	template: template,
-	allowedBlocks: allowed
+	template: block.template ?? [],
 } %}
 
 {% set attrs = {} %}
 
 {% if function('is_admin') == false %}
 	{% set attrs = {
-		'x-data': '{ ' ~ block.id ~ ': $persist(true) }',
-		'x-show': block.id
+		'x-data': '{ ' ~ id ~ ': $persist(true) }',
+		'x-show': id
 	} %}
 {% endif %}
-<section
-	{{ block_attrs( block, 'gap-24 lg:gap-48', attrs ) }}
->
-	<div class="flex flex-col items-start gap-24 lg:flex-row lg:gap-48 lg:items-center">
+
+<section {{ block_attrs( block, '', attrs ) }} >
+	<div class="acf-block-inner__container">
 		{{ inner_blocks( inner ) }}
 	</div>
-	{{ function( 'alert_banner_dismiss_button', block.id ) }}
+	{{ function( 'alert_banner_dismiss_button', id ) }}
 </section>
+
