--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/render.twig
@@ -2,16 +2,11 @@
   Block: Text & Icon Cards
 #}
 
-{% set template = [
-  [ 'acf/text-icon-card' ],
-  [ 'acf/text-icon-card' ],
-  [ 'acf/text-icon-card' ]
-] %}
-{% set allowed = [ 'acf/text-icon-card' ] %}
 {% set inner = {
-	template: template,
-	allowedBlocks: allowed,
+	template: block.template ?? [],
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="acf-block-inner__container">
+  		{{ inner_blocks( inner ) }}
+	</div>
 </section>
