--- a/wp-content/themes/wp-starter/blocks/image-caption/render.twig
+++ b/wp-content/themes/wp-starter/blocks/image-caption/render.twig
@@ -2,15 +2,12 @@
   Block: Image with Caption
 #}
 
-{% set template = [
-  [ 'core/image' ]
-] %}
-{% set allowed = [ 'core/image' ] %}
 {% set inner = {
-	template: template,
-	allowedBlocks: allowed,
+	template: block.template ?? [],
 	templateLock: 'all'
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="acf-block-inner__container">
+		{{ inner_blocks( inner ) }}
+	</div>
 </section>
