--- a/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
+++ b/wp-content/themes/wp-starter/blocks/text-icon-cards/style.css
@@ -1,6 +1,9 @@
 @layer components {
 	.acf-block-text-icon-cards {
-		@apply flex gap-y-32 md:gap-y-80;
+		.acf-block-inner__container,
+		.acf-block-inner__container > .block-editor-block-list__layout {
+			@apply flex flex-wrap justify-start gap-x-24 gap-y-32 md:gap-y-80;
+		}
 
 		.acf-block-text-icon-card,
 		.wp-block-acf-text-icon-card {
