--- a/wp-content/themes/wp-starter/blocks/text-image/render.twig
+++ b/wp-content/themes/wp-starter/blocks/text-image/render.twig
@@ -2,24 +2,11 @@
   Block: Text & Image
 #}
 
-{% set template = [
-	[
-		'core/pattern',
-		{
-			'slug': 'wp-starter/text-image-inner-blocks',
-		}
-	]
-] %}
-{% set allowed = [
-	'core/media-text',
-	'core/paragraph',
-	'core/heading',
-	'core/group',
-] %}
 {% set inner = {
-	template: template,
-	allowedBlocks: allowed
+	template: block.template ?? [],
 } %}
 <section {{ block_attrs( block ) }}>
-  {{ inner_blocks( inner ) }}
+	<div class="acf-block-inner__container">
+		{{ inner_blocks( inner ) }}
+	</div>
 </section>
