--- a/wp-content/themes/wp-starter/plop-templates/parts/variations.json.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/parts/variations.json.hbs
@@ -1,9 +1,21 @@
 "variations": [
     {
-      "name": "{{dashCase name}}-variation",
-      "icon": "schedule",
-      "title": "{{titleCase name}} Variation",
+      "name": "{{dashCase name}}-default",
+      "title": "{{titleCase name}} Default",
+      "attributes": {
+        "align": "full"
+      },
       "scope": ["transform"],
+      "isActive": ["align"],
       "isDefault": true
+    },
+    {
+      "name": "{{dashCase name}}-variation",
+      "title": "{{titleCase name}} Variation",
+      "attributes": {
+        "align": "wide"
+      },
+      "scope": ["transform"],
+      "isActive": ["align"]
     }
   ],
