--- a/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
+++ b/wp-content/themes/wp-starter/plop-templates/render.twig.hbs
@@ -2,27 +2,10 @@
   Block: {{titleCase name}}
 #}
 
-{% set template = [
-	[
-		'core/pattern',
-		{
-			'slug': '{{dashCase themeslug}}/{{dashCase name}}-inner-blocks',
-		}
-	]
-] %}
-
-{# If you need to limit what block types are allowed
-{% set allowed = [
-	'core/group',
-] %}
-#}
 
 {% set inner = {
-	template: template,
-	allowedBlocks: allowed
+	template: block.template ?? [],
 } %}
-
-
 <section \{{ block_attrs( attributes ) }}>
   \{{ inner_blocks( inner ) }}
 </section>
