[N/A] Add Post Excerpt Block Support

--- a/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
@@ -1,7 +1,7 @@
 // Add icons to Button blocks and style appropriately.
-.wp-block-button[class*="has-icon__"],
-.wp-block-navigation-item[class*="has-icon__"] {
+*[class*="has-icon__"] {
 	.wp-block-button__link,
+	.wp-block-post-excerpt__more-link,
 	.wp-block-navigation-item__content {
 		&::after {
 			content: "";
@@ -25,6 +25,7 @@
 
 	&.has-icon-position__left {
 		.wp-block-button__link,
+		.wp-block-post-excerpt__more-link,
 		.wp-block-navigation-item__content {
 			&::before {
 				content: "";
