[N/A] Allow Core Search block in Navigation Container

--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -10,7 +10,8 @@
 	'core/group',
 	'core/paragraph',
 	'core/button',
-	'core/navigation'
+	'core/navigation',
+	'core/search'
 ] %}
 {% set inner = {
 	template: template,
