--- a/wp-content/themes/wp-starter/src/styles/core-blocks/quote.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/quote.css
@@ -1,5 +1,5 @@
 @layer components {
 	blockquote.wp-block-quote-is-layout-flow {
-		@apply border-l border-solid border-gray-800;
+		@apply border-l border-solid border-black;
 	}
 }
