--- a/wp-content/themes/wp-starter/src/styles/core-blocks/navigation.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/navigation.css
@@ -1,7 +1,7 @@
 /** Navigation colors need to be updated to match your theme colors */
 @layer components {
 	.header-navigation {
-		@apply bg-gray-100 dark:bg-gray-800;
+		@apply bg-white dark:bg-black;
 
 		.wp-block-page-list {
 			@apply flex flex-col md:flex-row;
@@ -28,30 +28,30 @@
 				/* Menu Links */
 				.wp-block-navigation-item__content,
 				.wp-block-pages-list__item__link {
-					@apply mx-2 my-4 text-gray-800 dark:text-white;
+					@apply mx-2 my-4 text-black dark:text-white;
 
 					&:hover,
 					&:focus {
-						@apply text-gray-700 underline decoration-2 underline-offset-8 dark:text-gray-200;
+						@apply text-black underline decoration-2 underline-offset-8 dark:text-white;
 					}
 				}
 
 				.wp-block-navigation-submenu__toggle {
 					@apply relative;
-					@apply after:absolute after:inset-y-0 after:right-0 after:m-auto after:inline-block after:h-6 after:w-6 after:-rotate-45 after:border-b after:border-l after:border-solid after:border-gray-900 dark:after:border-white;
+					@apply after:absolute after:inset-y-0 after:right-0 after:m-auto after:inline-block after:h-6 after:w-6 after:-rotate-45 after:border-b after:border-l after:border-solid after:border-black dark:after:border-white;
 				}
 
 				/* Submenu */
 				.wp-block-navigation__submenu-container {
-					@apply relative flex flex-col border-2 p-0 dark:border-gray-800;
+					@apply relative flex flex-col border-2 p-0 dark:border-black;
 					@apply md:absolute;
 
 					.wp-block-navigation-item__content {
-						@apply text-gray-800 dark:text-gray-800;
+						@apply text-black dark:text-black;
 
 						&:hover,
 						&:focus {
-							@apply text-gray-700 underline decoration-2 underline-offset-8 dark:text-gray-700;
+							@apply text-black underline decoration-2 underline-offset-8 dark:text-black;
 						}
 					}
 				}
