[N/A] Icon Only style and default logo

--- a/wp-content/themes/wp-starter/src/styles/core-blocks/buttons.css
+++ b/wp-content/themes/wp-starter/src/styles/core-blocks/buttons.css
@@ -9,6 +9,12 @@
 				@apply btn-outline;
 			}
 		}
+
+		&.is-style-icon-only {
+			.wp-block-button__link {
+				@apply text-zero gap-0;
+			}
+		}
 	}
 
 	/* Light versions for dark mode*/
