[N/A] Core Spacer support in Navigation Container

--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -11,7 +11,8 @@
 	'core/paragraph',
 	'core/button',
 	'core/navigation',
-	'core/search'
+	'core/search',
+	'core/spacer'
 ] %}
 {% set inner = {
 	template: template,
