--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -12,7 +12,8 @@
 	'core/button',
 	'core/navigation',
 	'core/search',
-	'core/spacer'
+	'core/spacer',
+	'core/separator'
 ] %}
 {% set inner = {
 	template: template,
