[N/A] Site Logo Support

--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -9,6 +9,8 @@
 {% set allowed = [
 	'core/group',
 	'core/paragraph',
+	'core/site-logo',
+	'core/buttons',
 	'core/button',
 	'core/navigation',
 	'core/search',
