--- a/wp-content/plugins/acf-blocks-toolkit/src/index.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/index.scss
@@ -1,4 +1,5 @@
 *[class*="has-icon__"] {
+	&.wp-block-read-more,
 	.wp-block-button__link,
 	.wp-block-post-excerpt__more-link,
 	.wp-block-navigation-item__content {
