[#148] Fixing some small bugs

--- a/wp-content/themes/wp-starter/blocks/dialog/editor.css
+++ b/wp-content/themes/wp-starter/blocks/dialog/editor.css
@@ -12,7 +12,7 @@
 	}
 
 	.acfbt-dialog-label {
-		@apply block cursor-pointer;
+		@apply mb-24 block cursor-pointer;
 	}
 
 	.acfbt-dialog-checkbox {
