[N/A] Various Cleanup and Feedback from PHCC (#161)
* [N/A] Navigation Container Cleanup

* [N/A] Remove "Dark" from the color labels.

* Deployment bug fix

* Revert "Deployment bug fix"

This reverts commit ba909bbc4564eb93bee896511b51c08fc1e6221a.

* [N/A] Icon Only style and default logo

* [N/A] Core Spacer support in Navigation Container

* [N/A] Separator Support

* [N/A] Site Logo Support

* [N/A] Support for core block styles de-registration

* [N/A] Post Install Script Cleanup

* [N/A] Updates to Color generation

* [N/A] Read More Block Icon support, remove core features in MU plugin

* [N/A] Remove Template Part wrapper by default

* [N/A] ACF BT Core API Class

* [N/A] Added Viget logo as default

* [N/A] Template Parts theme.json registration

* [N/A] Version updates

* [N/A] Dynamic Dark Colors

* [N/A] Reverted color placement change

--- a/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
+++ b/wp-content/themes/wp-starter/blocks/navigation-container/render.twig
@@ -9,9 +9,13 @@
 {% set allowed = [
 	'core/group',
 	'core/paragraph',
+	'core/site-logo',
+	'core/buttons',
 	'core/button',
 	'core/navigation',
-	'core/search'
+	'core/search',
+	'core/spacer',
+	'core/separator'
 ] %}
 {% set inner = {
 	template: template,
@@ -27,12 +31,12 @@
 	} %}
 {% endif %}
 
-<div {{ block_attrs( block, 'wp-block-group navigation-container flex flex-col items-end gap-5 md:w-auto w-full', attrs ) }}>
+<div {{ block_attrs( block, '', attrs ) }}>
 	<button
 		{% if function('is_admin') == false %}
 			@click="menuIsOpen = !menuIsOpen"
 			x-cloak
-			class="absolute inset-y-0 right-0 flex items-center justify-center w-32 h-32 text-black md:hidden dark:text-white"
+			class="navigation-toggle"
 		{% else %}
 			class="hidden"
 		{% endif %}
@@ -63,9 +67,9 @@
 			x-show="menuIsOpen"
 			@click.away="menuIsOpen = false"
 		{% endif %}
-		class="wp-block-group pt-24 md:pt-0 navigation-content md:!block w-full md:w-auto"
+		class="acf-block-inner__container"
 	>
-		<div>
+		<div class="navigation-content">
 			{{ inner_blocks( inner ) }}
 		</div>
 	</div>
