[N/A] Misc Feedback items/improvements

--- a/wp-content/plugins/acf-blocks-toolkit/src/index.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/index.scss
@@ -1,5 +1,7 @@
 *[class*="has-icon__"] {
 	&.wp-block-read-more,
+	&.wp-block-query-pagination-next,
+	&.wp-block-query-pagination-previous,
 	.wp-block-button__link,
 	.wp-block-post-excerpt__more-link,
 	.wp-block-navigation-item__content {
