--- a/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
+++ b/wp-content/plugins/acf-blocks-toolkit/src/editor.scss
@@ -1,6 +1,8 @@
 // Add icons to Button blocks and style appropriately.
 *[class*="has-icon__"] {
 	&.wp-block-read-more,
+	&.wp-block-query-pagination-next,
+	&.wp-block-query-pagination-previous,
 	.wp-block-button__link,
 	.wp-block-post-excerpt__more-link,
 	.wp-block-navigation-item__content {
@@ -26,6 +28,8 @@
 
 	&.has-icon-position__left {
 		&.wp-block-read-more,
+		&.wp-block-query-pagination-next,
+		&.wp-block-query-pagination-previous,
 		.wp-block-button__link,
 		.wp-block-post-excerpt__more-link,
 		.wp-block-navigation-item__content {
