--- a/wp-content/themes/wp-starter/blocks/accordion/style.css
+++ b/wp-content/themes/wp-starter/blocks/accordion/style.css
@@ -9,6 +9,10 @@
 				@apply after:absolute after:bottom-0 after:right-0 after:top-0 after:flex after:items-center after:font-mono after:text-lg after:content-['\002B'];
 				@apply hover:text-black hover:after:text-black;
 				@apply focus:text-black focus:outline-black focus:after:text-black;
+
+				&::-webkit-details-marker {
+					@apply hidden;
+				}
 			}
 
 			&[open] {
