--- a/wp-content/mu-plugins/viget-wp/src/assets/css/admin-editor.css
+++ b/wp-content/mu-plugins/viget-wp/src/assets/css/admin-editor.css
@@ -35,3 +35,7 @@
   padding: 5px 20px;
   text-decoration: none;
 }
+
+.acf-block > .acf-innerblocks-container:first-child {
+  display: contents;
+}
