--- a/wp-content/themes/wp-starter/blocks/video-player/render.twig
+++ b/wp-content/themes/wp-starter/blocks/video-player/render.twig
@@ -2,17 +2,14 @@
 Block: Video Player
 #}
 
-{% set allowed = [
-	'core/cover',
-	'core/embed'
-] %}
-
+{% set attrs = {} %}
 {% set inner = {
 	template: block.template ?? [],
-	allowedBlocks: allowed
+	allowedBlocks: [
+		'core/cover',
+		'core/embed'
+	]
 } %}
-
-{% set attrs = {} %}
 
 {% if function('is_admin') == false %}
 	{% set attrs = {
