--- a/wp-content/themes/wp-starter/blocks/text-image/style.css
+++ b/wp-content/themes/wp-starter/blocks/text-image/style.css
@@ -4,7 +4,7 @@
 			@apply gap-fluid-sm;
 		}
 		.wp-block-media-text__media {
-			@apply aspect-5/4 w-full;
+			@apply w-full;
 		}
 
 		.wp-block-media-text__content {
